# paas-app-charmer

./: .gitignore  .licenserc.yaml  .trivyignore  .woke.yaml  README.md  localstack-installation.sh  pyproject.toml  setup.py  tox.ini
.github/workflows/: integration_test.yaml  move.yaml  release.yaml
doc/: write-your-first-kubernetes-charm-for-a-go-app.md
docs/tutorials/: flask.md
examples/django/: rockcraft.yaml
examples/django/charm/: charmcraft.yaml
examples/django/charm/src/: charm.py
examples/django/django_app/: manage.py  migrate.sh
examples/django/django_app/django_app/: asgi.py  settings.py  urls.py  wsgi.py
examples/django/django_app/testing/: admin.py  apps.py  models.py  tests.py  views.py
examples/fastapi/: app.py  requirements.txt  rockcraft.yaml
examples/fastapi/alembic/: env.py
examples/fastapi/alembic/versions/: eca6177bd16a_initial_migration.py
examples/fastapi/charm/: charmcraft.yaml
examples/fastapi/charm/src/: charm.py
examples/flask/: charmcraft.yaml  json
examples/flask/src/: charm.py
examples/flask/test_db_rock/: alembic.ini  app.py  requirements.txt  rockcraft.yaml
examples/flask/test_rock/: app.py  requirements.txt  rockcraft.yaml
examples/go/: go.mod  go.sum  main.go  migrate.sh  rockcraft.yaml
examples/go/charm/: charmcraft.yaml  requirements.txt
examples/go/charm/src/: charm.py
paas_app_charmer/: __init__.py  app.py  charm.py  charm_integrations.py  charm_state.py  charm_utils.py  database_migration.py  databases.py  exceptions.py  framework.py  helpers.py  integrations.py  observability.py  rabbitmq.py  secret_storage.py  utils.py
paas_app_charmer/_generic/: generic_app.py
paas_app_charmer/_gunicorn/: charm.py  charm_state.py  charm_utils.py  logrotate.py  observability.py  secret_storage.py  webserver.py  workload_config.py  workload_state.py  wsgi_app.py
paas_app_charmer/django/: __init__.py  charm.py
paas_app_charmer/fastapi/: __init__.py  charm.py
paas_app_charmer/flask/: __init__.py  charm.py
paas_app_charmer/go/: __init__.py  charm.py
sdk-docs/explanation/: flask.md
sdk-docs/how-to/: flask.md
sdk-docs/overview/: flask.md
sdk-docs/reference/: flask.md
sdk-docs/tutorials/: flask.md
tests/: conftest.py
tests/integration/: conftest.py  helpers.py
tests/integration/django/: conftest.py  test_django.py  test_django_integrations.py  test_integrations.py
tests/integration/fastapi/: conftest.py  test_fastapi.py
tests/integration/flask/: conftest.py  requirements.txt  test_charm.py  test_cos.py  test_database.py  test_db_migration.py  test_integrations.py  test_proxy.py  test_s3.py  test_workers.py
tests/integration/go/: conftest.py  test_charm.py  test_go.py
tests/unit/: test_integrations.py
tests/unit/django/: conftest.py  constants.py  test_charm.py
tests/unit/fastapi/: conftest.py  constants.py  test_charm.py
tests/unit/flask/: conftest.py  constants.py  test_charm.py  test_charm_state.py  test_database_migration.py  test_databases.py  test_flask_app.py  test_webserver.py  test_workers.py
tests/unit/go/: conftest.py  constants.py  test_app.py  test_charm.py  test_generic_app.py
(+8 files in other folders)
