# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "paas-app-charmer"
version = "1.4.0"
description = "paas-app-charmer is now paas-charm."
readme = "README.md"
authors = [
    {name = "Canonical IS DevOps team", email="is-devops-team@canonical.com"},
]
requires-python = ">=3.10"
dependencies = [
    "paas-charm<2"
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]


[project.urls]
Repository = "https://github.com/canonical/paas-app-charmer"
